# artifact-foundry

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
.claude/: CLAUDE.md  ORGANIZATION.md  README.md
.claude/agents/: learning-curator.md  snippet-reviewer.md
.claude/rules/: interview-prep-notes.md  markdown-notes.md  python-snippets.md
ai-engineering/: resources.md
ai-engineering/notes/: agent-to-agent.md  agentic-design-patterns.md  agents.md  context-engineering.md  evaluation-driven-development.md  mcp.md  memory-systems.md  multi-agent-systems.md  rag.md  tool-use.md
ai-productivity/: resources.md
ai-productivity/notes/: claude-code-hooks.md  claude-code-setup.md
deep-learning/: resources.md
deep-learning/notes/: README.md  activation-functions.md  cnn_architecture.md  deep-learning-basics.md  pytorch_fundamentals.md  rnn_architecture.md  transformer_architecture.md
foundations/: resources.md
foundations/notes/: git.md  python-build-systems.md  python-class-anatomy.md
interview-prep/: resources.md
interview-prep/flashcards/: probability.md
interview-prep/notes/: classical-ml-cheatsheet.md  docker-cheatsheet.md  leetcode-sql-patterns.md  ml-system-design-cheatsheet.md  mlops-cheatsheet.md  probability-cheatsheet.md  sql-cheatsheet.md
llms/: resources.md
llms/notes/: README.md  attention-mechanisms.md  evaluation.md  fine-tuning.md  pretraining.md  prompting-techniques.md  tokenization.md
machine-learning/: resources.md
machine-learning/notes/: bagging.md  bias-variance-tradeoff.md  (+18 more)
productionization/: resources.md
(+89 files in other folders)
